conf/k8s_yaml/ingress/ingress-demo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: www.myapp.io
    http:
      paths:
      - backend:
          serviceName: myapp-svc-demo
          servicePort: 80
